@@ -5,10 +5,6 @@ MarketPress BP Features
 
 class MarketPress_BP {
 
-	function MarketPress_BP() {
-		$this->__construct();
-	}
-	
   function __construct() {
 
 
