@@ -256,7 +256,7 @@ class MP_Gateway_Stripe extends MP_Gateway_API {
 	*
 	* Don't forget to return!
 	*/
-	function order_confirmation_email($msg) {
+	function order_confirmation_email($msg, $order = null) {
 		return $msg;
 	}
 	
