@@ -5,7 +5,10 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+- Removed all the old style PHP 4 constructors (Class name functions)
 - Add multiple currency support to Payflow Pro gateway
+- Fixed order_confirmation_email() declaration to match it's parent.(Warnings)
+- In USPS shipping added maximum box weights to flat rate boxes to improve calculating the number of boxes needed.
 
 2.8.8 - 7/15/2013 - Aaron Edwards, Arnold, Marko Miljus
 ----------------------------------------------------------------------
